[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-tokenizer"
version = "2.0.0"
dependencies = [
    "gensim == 4.3.2",
    "scipy == 1.12.0"
]
authors = [
    { name="Shaked Yehezkel"},
    { name="Kensho Technologies"},
    { name="Bar Gazit"},
    { name="Yuval Pinter"}
]
description = "SaGe subword tokenizer - version 2.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MeLeLBGU/SaGe"
Issues = "https://github.com/MeLeLBGU/SaGe/issues"